// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiTypes Should have specific API properties: all exports 1`] = `
Object {
  "API_QUERY_ORDERING": "ordering",
  "API_QUERY_PAGE": "page",
  "API_QUERY_PAGE_SIZE": "page_size",
  "API_QUERY_SCAN_TYPE": "scan_type",
  "API_QUERY_SOURCE_TYPE": "source_type",
  "API_QUERY_STATUS": "status",
  "API_RESPONSE_CREDENTIALS_COUNT": "count",
  "API_RESPONSE_CREDENTIALS_RESULTS": "results",
  "API_RESPONSE_CREDENTIAL_CRED_TYPE": "cred_type",
  "API_RESPONSE_CREDENTIAL_ID": "id",
  "API_RESPONSE_CREDENTIAL_NAME": "name",
  "API_RESPONSE_JOBS_COUNT": "count",
  "API_RESPONSE_JOBS_NEXT": "next",
  "API_RESPONSE_JOBS_RESULTS": "results",
  "API_RESPONSE_JOB_END_TIME": "end_time",
  "API_RESPONSE_JOB_ID": "id",
  "API_RESPONSE_JOB_NAME": "name",
  "API_RESPONSE_JOB_REPORT_ID": "report_id",
  "API_RESPONSE_JOB_SOURCES": "sources",
  "API_RESPONSE_JOB_SOURCES_ID": "id",
  "API_RESPONSE_JOB_SOURCES_NAME": "name",
  "API_RESPONSE_JOB_SOURCES_SOURCE_TYPE": "source_type",
  "API_RESPONSE_JOB_START_TIME": "start_time",
  "API_RESPONSE_JOB_STATUS": "status",
  "API_RESPONSE_JOB_SYS_FAILED": "systems_failed",
  "API_RESPONSE_JOB_SYS_SCANNED": "systems_scanned",
  "API_RESPONSE_JOB_TASKS": "tasks",
  "API_RESPONSE_JOB_TASKS_SCAN_TYPE": "scan_type",
  "API_RESPONSE_JOB_TASKS_SOURCE": "source",
  "API_RESPONSE_JOB_TASKS_STATUS": "status",
  "API_RESPONSE_JOB_TASKS_STATUS_MESSAGE": "status_message",
  "API_RESPONSE_SCANS_COUNT": "count",
  "API_RESPONSE_SCANS_RESULTS": "results",
  "API_RESPONSE_SCAN_ID": "id",
  "API_RESPONSE_SCAN_JOBS": "jobs",
  "API_RESPONSE_SCAN_MOST_RECENT": "most_recent",
  "API_RESPONSE_SCAN_MOST_RECENT_END_TIME": "end_time",
  "API_RESPONSE_SCAN_MOST_RECENT_ID": "id",
  "API_RESPONSE_SCAN_MOST_RECENT_REPORT_ID": "report_id",
  "API_RESPONSE_SCAN_MOST_RECENT_START_TIME": "start_time",
  "API_RESPONSE_SCAN_MOST_RECENT_STATUS": "status",
  "API_RESPONSE_SCAN_MOST_RECENT_STATUS_DETAILS": "status_details",
  "API_RESPONSE_SCAN_MOST_RECENT_STATUS_DETAILS_MESSAGE": "job_status_message",
  "API_RESPONSE_SCAN_MOST_RECENT_SYS_FAILED": "systems_failed",
  "API_RESPONSE_SCAN_MOST_RECENT_SYS_SCANNED": "systems_scanned",
  "API_RESPONSE_SCAN_NAME": "name",
  "API_RESPONSE_SCAN_SOURCES": "sources",
  "API_RESPONSE_SOURCES_COUNT": "count",
  "API_RESPONSE_SOURCES_RESULTS": "results",
  "API_RESPONSE_SOURCE_CONNECTION": "connection",
  "API_RESPONSE_SOURCE_CONNECTION_END_TIME": "end_time",
  "API_RESPONSE_SOURCE_CONNECTION_ID": "id",
  "API_RESPONSE_SOURCE_CONNECTION_START_TIME": "start_time",
  "API_RESPONSE_SOURCE_CONNECTION_STATUS": "status",
  "API_RESPONSE_SOURCE_CONNECTION_SYS_FAILED": "source_systems_failed",
  "API_RESPONSE_SOURCE_CONNECTION_SYS_SCANNED": "source_systems_scanned",
  "API_RESPONSE_SOURCE_CONNECTION_SYS_UNREACHABLE": "source_systems_unreachable",
  "API_RESPONSE_SOURCE_CREDENTIALS": "credentials",
  "API_RESPONSE_SOURCE_CREDENTIALS_ID": "id",
  "API_RESPONSE_SOURCE_CREDENTIALS_NAME": "name",
  "API_RESPONSE_SOURCE_HOSTS": "hosts",
  "API_RESPONSE_SOURCE_ID": "id",
  "API_RESPONSE_SOURCE_NAME": "name",
  "API_RESPONSE_SOURCE_OPTIONS": "options",
  "API_RESPONSE_SOURCE_OPTIONS_DISABLE_SSL": "disable_ssl",
  "API_RESPONSE_SOURCE_OPTIONS_PARAMIKO": "use_paramiko",
  "API_RESPONSE_SOURCE_OPTIONS_SSL_CERT": "ssl_cert_verify",
  "API_RESPONSE_SOURCE_OPTIONS_SSL_PROTOCOL": "ssl_protocol",
  "API_RESPONSE_SOURCE_PORT": "port",
  "API_RESPONSE_SOURCE_SOURCE_TYPE": "source_type",
  "API_RESPONSE_STATUS_API_VERSION": "api_version",
  "API_RESPONSE_STATUS_BUILD": "build",
  "API_RESPONSE_STATUS_SERVER_VERSION": "server_version",
  "API_RESPONSE_USER_USERNAME": "username",
  "API_SUBMIT_SCAN_NAME": "name",
  "API_SUBMIT_SCAN_OPTIONS": "options",
  "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH": "enabled_extended_product_search",
  "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH_BRMS": "jboss_brms",
  "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH_DIRS": "search_directories",
  "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH_EAP": "jboss_eap",
  "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH_FUSE": "jboss_fuse",
  "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH_WS": "jboss_ws",
  "API_SUBMIT_SCAN_OPTIONS_MAX_CONCURRENCY": "max_concurrency",
  "API_SUBMIT_SCAN_SOURCES": "sources",
  "API_SUBMIT_SOURCE_CREDENTIALS": "credentials",
  "API_SUBMIT_SOURCE_HOSTS": "hosts",
  "API_SUBMIT_SOURCE_ID": "id",
  "API_SUBMIT_SOURCE_NAME": "name",
  "API_SUBMIT_SOURCE_OPTIONS": "options",
  "API_SUBMIT_SOURCE_OPTIONS_DISABLE_SSL": "disable_ssl",
  "API_SUBMIT_SOURCE_OPTIONS_PARAMIKO": "use_paramiko",
  "API_SUBMIT_SOURCE_OPTIONS_SSL_CERT": "ssl_cert_verify",
  "API_SUBMIT_SOURCE_OPTIONS_SSL_PROTOCOL": "ssl_protocol",
  "API_SUBMIT_SOURCE_PORT": "port",
  "API_SUBMIT_SOURCE_SOURCE_TYPE": "source_type",
  "apiTypes": Object {
    "API_QUERY_ORDERING": "ordering",
    "API_QUERY_PAGE": "page",
    "API_QUERY_PAGE_SIZE": "page_size",
    "API_QUERY_SCAN_TYPE": "scan_type",
    "API_QUERY_SOURCE_TYPE": "source_type",
    "API_QUERY_STATUS": "status",
    "API_RESPONSE_CREDENTIALS_COUNT": "count",
    "API_RESPONSE_CREDENTIALS_RESULTS": "results",
    "API_RESPONSE_CREDENTIAL_CRED_TYPE": "cred_type",
    "API_RESPONSE_CREDENTIAL_ID": "id",
    "API_RESPONSE_CREDENTIAL_NAME": "name",
    "API_RESPONSE_JOBS_COUNT": "count",
    "API_RESPONSE_JOBS_NEXT": "next",
    "API_RESPONSE_JOBS_RESULTS": "results",
    "API_RESPONSE_JOB_END_TIME": "end_time",
    "API_RESPONSE_JOB_ID": "id",
    "API_RESPONSE_JOB_NAME": "name",
    "API_RESPONSE_JOB_REPORT_ID": "report_id",
    "API_RESPONSE_JOB_SOURCES": "sources",
    "API_RESPONSE_JOB_SOURCES_ID": "id",
    "API_RESPONSE_JOB_SOURCES_NAME": "name",
    "API_RESPONSE_JOB_SOURCES_SOURCE_TYPE": "source_type",
    "API_RESPONSE_JOB_START_TIME": "start_time",
    "API_RESPONSE_JOB_STATUS": "status",
    "API_RESPONSE_JOB_SYS_FAILED": "systems_failed",
    "API_RESPONSE_JOB_SYS_SCANNED": "systems_scanned",
    "API_RESPONSE_JOB_TASKS": "tasks",
    "API_RESPONSE_JOB_TASKS_SCAN_TYPE": "scan_type",
    "API_RESPONSE_JOB_TASKS_SOURCE": "source",
    "API_RESPONSE_JOB_TASKS_STATUS": "status",
    "API_RESPONSE_JOB_TASKS_STATUS_MESSAGE": "status_message",
    "API_RESPONSE_SCANS_COUNT": "count",
    "API_RESPONSE_SCANS_RESULTS": "results",
    "API_RESPONSE_SCAN_ID": "id",
    "API_RESPONSE_SCAN_JOBS": "jobs",
    "API_RESPONSE_SCAN_MOST_RECENT": "most_recent",
    "API_RESPONSE_SCAN_MOST_RECENT_END_TIME": "end_time",
    "API_RESPONSE_SCAN_MOST_RECENT_ID": "id",
    "API_RESPONSE_SCAN_MOST_RECENT_REPORT_ID": "report_id",
    "API_RESPONSE_SCAN_MOST_RECENT_START_TIME": "start_time",
    "API_RESPONSE_SCAN_MOST_RECENT_STATUS": "status",
    "API_RESPONSE_SCAN_MOST_RECENT_STATUS_DETAILS": "status_details",
    "API_RESPONSE_SCAN_MOST_RECENT_STATUS_DETAILS_MESSAGE": "job_status_message",
    "API_RESPONSE_SCAN_MOST_RECENT_SYS_FAILED": "systems_failed",
    "API_RESPONSE_SCAN_MOST_RECENT_SYS_SCANNED": "systems_scanned",
    "API_RESPONSE_SCAN_NAME": "name",
    "API_RESPONSE_SCAN_SOURCES": "sources",
    "API_RESPONSE_SOURCES_COUNT": "count",
    "API_RESPONSE_SOURCES_RESULTS": "results",
    "API_RESPONSE_SOURCE_CONNECTION": "connection",
    "API_RESPONSE_SOURCE_CONNECTION_END_TIME": "end_time",
    "API_RESPONSE_SOURCE_CONNECTION_ID": "id",
    "API_RESPONSE_SOURCE_CONNECTION_START_TIME": "start_time",
    "API_RESPONSE_SOURCE_CONNECTION_STATUS": "status",
    "API_RESPONSE_SOURCE_CONNECTION_SYS_FAILED": "source_systems_failed",
    "API_RESPONSE_SOURCE_CONNECTION_SYS_SCANNED": "source_systems_scanned",
    "API_RESPONSE_SOURCE_CONNECTION_SYS_UNREACHABLE": "source_systems_unreachable",
    "API_RESPONSE_SOURCE_CREDENTIALS": "credentials",
    "API_RESPONSE_SOURCE_CREDENTIALS_ID": "id",
    "API_RESPONSE_SOURCE_CREDENTIALS_NAME": "name",
    "API_RESPONSE_SOURCE_HOSTS": "hosts",
    "API_RESPONSE_SOURCE_ID": "id",
    "API_RESPONSE_SOURCE_NAME": "name",
    "API_RESPONSE_SOURCE_OPTIONS": "options",
    "API_RESPONSE_SOURCE_OPTIONS_DISABLE_SSL": "disable_ssl",
    "API_RESPONSE_SOURCE_OPTIONS_PARAMIKO": "use_paramiko",
    "API_RESPONSE_SOURCE_OPTIONS_SSL_CERT": "ssl_cert_verify",
    "API_RESPONSE_SOURCE_OPTIONS_SSL_PROTOCOL": "ssl_protocol",
    "API_RESPONSE_SOURCE_PORT": "port",
    "API_RESPONSE_SOURCE_SOURCE_TYPE": "source_type",
    "API_RESPONSE_STATUS_API_VERSION": "api_version",
    "API_RESPONSE_STATUS_BUILD": "build",
    "API_RESPONSE_STATUS_SERVER_VERSION": "server_version",
    "API_RESPONSE_USER_USERNAME": "username",
    "API_SUBMIT_SCAN_NAME": "name",
    "API_SUBMIT_SCAN_OPTIONS": "options",
    "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH": "enabled_extended_product_search",
    "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH_BRMS": "jboss_brms",
    "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH_DIRS": "search_directories",
    "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH_EAP": "jboss_eap",
    "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH_FUSE": "jboss_fuse",
    "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH_WS": "jboss_ws",
    "API_SUBMIT_SCAN_OPTIONS_MAX_CONCURRENCY": "max_concurrency",
    "API_SUBMIT_SCAN_SOURCES": "sources",
    "API_SUBMIT_SOURCE_CREDENTIALS": "credentials",
    "API_SUBMIT_SOURCE_HOSTS": "hosts",
    "API_SUBMIT_SOURCE_ID": "id",
    "API_SUBMIT_SOURCE_NAME": "name",
    "API_SUBMIT_SOURCE_OPTIONS": "options",
    "API_SUBMIT_SOURCE_OPTIONS_DISABLE_SSL": "disable_ssl",
    "API_SUBMIT_SOURCE_OPTIONS_PARAMIKO": "use_paramiko",
    "API_SUBMIT_SOURCE_OPTIONS_SSL_CERT": "ssl_cert_verify",
    "API_SUBMIT_SOURCE_OPTIONS_SSL_PROTOCOL": "ssl_protocol",
    "API_SUBMIT_SOURCE_PORT": "port",
    "API_SUBMIT_SOURCE_SOURCE_TYPE": "source_type",
  },
  "default": Object {
    "API_QUERY_ORDERING": "ordering",
    "API_QUERY_PAGE": "page",
    "API_QUERY_PAGE_SIZE": "page_size",
    "API_QUERY_SCAN_TYPE": "scan_type",
    "API_QUERY_SOURCE_TYPE": "source_type",
    "API_QUERY_STATUS": "status",
    "API_RESPONSE_CREDENTIALS_COUNT": "count",
    "API_RESPONSE_CREDENTIALS_RESULTS": "results",
    "API_RESPONSE_CREDENTIAL_CRED_TYPE": "cred_type",
    "API_RESPONSE_CREDENTIAL_ID": "id",
    "API_RESPONSE_CREDENTIAL_NAME": "name",
    "API_RESPONSE_JOBS_COUNT": "count",
    "API_RESPONSE_JOBS_NEXT": "next",
    "API_RESPONSE_JOBS_RESULTS": "results",
    "API_RESPONSE_JOB_END_TIME": "end_time",
    "API_RESPONSE_JOB_ID": "id",
    "API_RESPONSE_JOB_NAME": "name",
    "API_RESPONSE_JOB_REPORT_ID": "report_id",
    "API_RESPONSE_JOB_SOURCES": "sources",
    "API_RESPONSE_JOB_SOURCES_ID": "id",
    "API_RESPONSE_JOB_SOURCES_NAME": "name",
    "API_RESPONSE_JOB_SOURCES_SOURCE_TYPE": "source_type",
    "API_RESPONSE_JOB_START_TIME": "start_time",
    "API_RESPONSE_JOB_STATUS": "status",
    "API_RESPONSE_JOB_SYS_FAILED": "systems_failed",
    "API_RESPONSE_JOB_SYS_SCANNED": "systems_scanned",
    "API_RESPONSE_JOB_TASKS": "tasks",
    "API_RESPONSE_JOB_TASKS_SCAN_TYPE": "scan_type",
    "API_RESPONSE_JOB_TASKS_SOURCE": "source",
    "API_RESPONSE_JOB_TASKS_STATUS": "status",
    "API_RESPONSE_JOB_TASKS_STATUS_MESSAGE": "status_message",
    "API_RESPONSE_SCANS_COUNT": "count",
    "API_RESPONSE_SCANS_RESULTS": "results",
    "API_RESPONSE_SCAN_ID": "id",
    "API_RESPONSE_SCAN_JOBS": "jobs",
    "API_RESPONSE_SCAN_MOST_RECENT": "most_recent",
    "API_RESPONSE_SCAN_MOST_RECENT_END_TIME": "end_time",
    "API_RESPONSE_SCAN_MOST_RECENT_ID": "id",
    "API_RESPONSE_SCAN_MOST_RECENT_REPORT_ID": "report_id",
    "API_RESPONSE_SCAN_MOST_RECENT_START_TIME": "start_time",
    "API_RESPONSE_SCAN_MOST_RECENT_STATUS": "status",
    "API_RESPONSE_SCAN_MOST_RECENT_STATUS_DETAILS": "status_details",
    "API_RESPONSE_SCAN_MOST_RECENT_STATUS_DETAILS_MESSAGE": "job_status_message",
    "API_RESPONSE_SCAN_MOST_RECENT_SYS_FAILED": "systems_failed",
    "API_RESPONSE_SCAN_MOST_RECENT_SYS_SCANNED": "systems_scanned",
    "API_RESPONSE_SCAN_NAME": "name",
    "API_RESPONSE_SCAN_SOURCES": "sources",
    "API_RESPONSE_SOURCES_COUNT": "count",
    "API_RESPONSE_SOURCES_RESULTS": "results",
    "API_RESPONSE_SOURCE_CONNECTION": "connection",
    "API_RESPONSE_SOURCE_CONNECTION_END_TIME": "end_time",
    "API_RESPONSE_SOURCE_CONNECTION_ID": "id",
    "API_RESPONSE_SOURCE_CONNECTION_START_TIME": "start_time",
    "API_RESPONSE_SOURCE_CONNECTION_STATUS": "status",
    "API_RESPONSE_SOURCE_CONNECTION_SYS_FAILED": "source_systems_failed",
    "API_RESPONSE_SOURCE_CONNECTION_SYS_SCANNED": "source_systems_scanned",
    "API_RESPONSE_SOURCE_CONNECTION_SYS_UNREACHABLE": "source_systems_unreachable",
    "API_RESPONSE_SOURCE_CREDENTIALS": "credentials",
    "API_RESPONSE_SOURCE_CREDENTIALS_ID": "id",
    "API_RESPONSE_SOURCE_CREDENTIALS_NAME": "name",
    "API_RESPONSE_SOURCE_HOSTS": "hosts",
    "API_RESPONSE_SOURCE_ID": "id",
    "API_RESPONSE_SOURCE_NAME": "name",
    "API_RESPONSE_SOURCE_OPTIONS": "options",
    "API_RESPONSE_SOURCE_OPTIONS_DISABLE_SSL": "disable_ssl",
    "API_RESPONSE_SOURCE_OPTIONS_PARAMIKO": "use_paramiko",
    "API_RESPONSE_SOURCE_OPTIONS_SSL_CERT": "ssl_cert_verify",
    "API_RESPONSE_SOURCE_OPTIONS_SSL_PROTOCOL": "ssl_protocol",
    "API_RESPONSE_SOURCE_PORT": "port",
    "API_RESPONSE_SOURCE_SOURCE_TYPE": "source_type",
    "API_RESPONSE_STATUS_API_VERSION": "api_version",
    "API_RESPONSE_STATUS_BUILD": "build",
    "API_RESPONSE_STATUS_SERVER_VERSION": "server_version",
    "API_RESPONSE_USER_USERNAME": "username",
    "API_SUBMIT_SCAN_NAME": "name",
    "API_SUBMIT_SCAN_OPTIONS": "options",
    "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH": "enabled_extended_product_search",
    "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH_BRMS": "jboss_brms",
    "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH_DIRS": "search_directories",
    "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH_EAP": "jboss_eap",
    "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH_FUSE": "jboss_fuse",
    "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH_WS": "jboss_ws",
    "API_SUBMIT_SCAN_OPTIONS_MAX_CONCURRENCY": "max_concurrency",
    "API_SUBMIT_SCAN_SOURCES": "sources",
    "API_SUBMIT_SOURCE_CREDENTIALS": "credentials",
    "API_SUBMIT_SOURCE_HOSTS": "hosts",
    "API_SUBMIT_SOURCE_ID": "id",
    "API_SUBMIT_SOURCE_NAME": "name",
    "API_SUBMIT_SOURCE_OPTIONS": "options",
    "API_SUBMIT_SOURCE_OPTIONS_DISABLE_SSL": "disable_ssl",
    "API_SUBMIT_SOURCE_OPTIONS_PARAMIKO": "use_paramiko",
    "API_SUBMIT_SOURCE_OPTIONS_SSL_CERT": "ssl_cert_verify",
    "API_SUBMIT_SOURCE_OPTIONS_SSL_PROTOCOL": "ssl_protocol",
    "API_SUBMIT_SOURCE_PORT": "port",
    "API_SUBMIT_SOURCE_SOURCE_TYPE": "source_type",
  },
}
`;

exports[`ApiTypes Should have specific API properties: default export 1`] = `
Object {
  "API_QUERY_ORDERING": "ordering",
  "API_QUERY_PAGE": "page",
  "API_QUERY_PAGE_SIZE": "page_size",
  "API_QUERY_SCAN_TYPE": "scan_type",
  "API_QUERY_SOURCE_TYPE": "source_type",
  "API_QUERY_STATUS": "status",
  "API_RESPONSE_CREDENTIALS_COUNT": "count",
  "API_RESPONSE_CREDENTIALS_RESULTS": "results",
  "API_RESPONSE_CREDENTIAL_CRED_TYPE": "cred_type",
  "API_RESPONSE_CREDENTIAL_ID": "id",
  "API_RESPONSE_CREDENTIAL_NAME": "name",
  "API_RESPONSE_JOBS_COUNT": "count",
  "API_RESPONSE_JOBS_NEXT": "next",
  "API_RESPONSE_JOBS_RESULTS": "results",
  "API_RESPONSE_JOB_END_TIME": "end_time",
  "API_RESPONSE_JOB_ID": "id",
  "API_RESPONSE_JOB_NAME": "name",
  "API_RESPONSE_JOB_REPORT_ID": "report_id",
  "API_RESPONSE_JOB_SOURCES": "sources",
  "API_RESPONSE_JOB_SOURCES_ID": "id",
  "API_RESPONSE_JOB_SOURCES_NAME": "name",
  "API_RESPONSE_JOB_SOURCES_SOURCE_TYPE": "source_type",
  "API_RESPONSE_JOB_START_TIME": "start_time",
  "API_RESPONSE_JOB_STATUS": "status",
  "API_RESPONSE_JOB_SYS_FAILED": "systems_failed",
  "API_RESPONSE_JOB_SYS_SCANNED": "systems_scanned",
  "API_RESPONSE_JOB_TASKS": "tasks",
  "API_RESPONSE_JOB_TASKS_SCAN_TYPE": "scan_type",
  "API_RESPONSE_JOB_TASKS_SOURCE": "source",
  "API_RESPONSE_JOB_TASKS_STATUS": "status",
  "API_RESPONSE_JOB_TASKS_STATUS_MESSAGE": "status_message",
  "API_RESPONSE_SCANS_COUNT": "count",
  "API_RESPONSE_SCANS_RESULTS": "results",
  "API_RESPONSE_SCAN_ID": "id",
  "API_RESPONSE_SCAN_JOBS": "jobs",
  "API_RESPONSE_SCAN_MOST_RECENT": "most_recent",
  "API_RESPONSE_SCAN_MOST_RECENT_END_TIME": "end_time",
  "API_RESPONSE_SCAN_MOST_RECENT_ID": "id",
  "API_RESPONSE_SCAN_MOST_RECENT_REPORT_ID": "report_id",
  "API_RESPONSE_SCAN_MOST_RECENT_START_TIME": "start_time",
  "API_RESPONSE_SCAN_MOST_RECENT_STATUS": "status",
  "API_RESPONSE_SCAN_MOST_RECENT_STATUS_DETAILS": "status_details",
  "API_RESPONSE_SCAN_MOST_RECENT_STATUS_DETAILS_MESSAGE": "job_status_message",
  "API_RESPONSE_SCAN_MOST_RECENT_SYS_FAILED": "systems_failed",
  "API_RESPONSE_SCAN_MOST_RECENT_SYS_SCANNED": "systems_scanned",
  "API_RESPONSE_SCAN_NAME": "name",
  "API_RESPONSE_SCAN_SOURCES": "sources",
  "API_RESPONSE_SOURCES_COUNT": "count",
  "API_RESPONSE_SOURCES_RESULTS": "results",
  "API_RESPONSE_SOURCE_CONNECTION": "connection",
  "API_RESPONSE_SOURCE_CONNECTION_END_TIME": "end_time",
  "API_RESPONSE_SOURCE_CONNECTION_ID": "id",
  "API_RESPONSE_SOURCE_CONNECTION_START_TIME": "start_time",
  "API_RESPONSE_SOURCE_CONNECTION_STATUS": "status",
  "API_RESPONSE_SOURCE_CONNECTION_SYS_FAILED": "source_systems_failed",
  "API_RESPONSE_SOURCE_CONNECTION_SYS_SCANNED": "source_systems_scanned",
  "API_RESPONSE_SOURCE_CONNECTION_SYS_UNREACHABLE": "source_systems_unreachable",
  "API_RESPONSE_SOURCE_CREDENTIALS": "credentials",
  "API_RESPONSE_SOURCE_CREDENTIALS_ID": "id",
  "API_RESPONSE_SOURCE_CREDENTIALS_NAME": "name",
  "API_RESPONSE_SOURCE_HOSTS": "hosts",
  "API_RESPONSE_SOURCE_ID": "id",
  "API_RESPONSE_SOURCE_NAME": "name",
  "API_RESPONSE_SOURCE_OPTIONS": "options",
  "API_RESPONSE_SOURCE_OPTIONS_DISABLE_SSL": "disable_ssl",
  "API_RESPONSE_SOURCE_OPTIONS_PARAMIKO": "use_paramiko",
  "API_RESPONSE_SOURCE_OPTIONS_SSL_CERT": "ssl_cert_verify",
  "API_RESPONSE_SOURCE_OPTIONS_SSL_PROTOCOL": "ssl_protocol",
  "API_RESPONSE_SOURCE_PORT": "port",
  "API_RESPONSE_SOURCE_SOURCE_TYPE": "source_type",
  "API_RESPONSE_STATUS_API_VERSION": "api_version",
  "API_RESPONSE_STATUS_BUILD": "build",
  "API_RESPONSE_STATUS_SERVER_VERSION": "server_version",
  "API_RESPONSE_USER_USERNAME": "username",
  "API_SUBMIT_SCAN_NAME": "name",
  "API_SUBMIT_SCAN_OPTIONS": "options",
  "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH": "enabled_extended_product_search",
  "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH_BRMS": "jboss_brms",
  "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH_DIRS": "search_directories",
  "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH_EAP": "jboss_eap",
  "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH_FUSE": "jboss_fuse",
  "API_SUBMIT_SCAN_OPTIONS_EXTENDED_SEARCH_WS": "jboss_ws",
  "API_SUBMIT_SCAN_OPTIONS_MAX_CONCURRENCY": "max_concurrency",
  "API_SUBMIT_SCAN_SOURCES": "sources",
  "API_SUBMIT_SOURCE_CREDENTIALS": "credentials",
  "API_SUBMIT_SOURCE_HOSTS": "hosts",
  "API_SUBMIT_SOURCE_ID": "id",
  "API_SUBMIT_SOURCE_NAME": "name",
  "API_SUBMIT_SOURCE_OPTIONS": "options",
  "API_SUBMIT_SOURCE_OPTIONS_DISABLE_SSL": "disable_ssl",
  "API_SUBMIT_SOURCE_OPTIONS_PARAMIKO": "use_paramiko",
  "API_SUBMIT_SOURCE_OPTIONS_SSL_CERT": "ssl_cert_verify",
  "API_SUBMIT_SOURCE_OPTIONS_SSL_PROTOCOL": "ssl_protocol",
  "API_SUBMIT_SOURCE_PORT": "port",
  "API_SUBMIT_SOURCE_SOURCE_TYPE": "source_type",
}
`;
